# opeGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build-opegl.sh  clean.sh  debug.sh  embed-shaders.sh  run.sh
.cache/clangd/index/: glad.h.75B0A71AF106178E.idx  glfw3.h.FD81D599CA2B3896.idx  khrplatform.h.DFDD3349195BFAF9.idx  main.cpp.3FEF391AC08253DD.idx  shader.h.0F22B7B588F17422.idx  shader.h.35900F531C18885B.idx  stb_image.h.7A9060D8B3EEF4E2.idx  texture.h.716442CCEF49D220.idx
game-template/: CMakeLists.txt  clean.sh  run.sh
game-template/resources/: rubberduck.mesh
game-template/resources/cup/: license.txt  scene.gltf
game-template/resources/rubber_duck/: scene.gltf
game-template/src/: main.cpp
include/: camera.h  camera.hpp  common.h  constants.hpp  frag-shader.h  game.h  gamescene.h  level.hpp  light.hpp  lighting.h  material.h  mesh.h  model-shader.h  model.h  model.hpp  opegl.hpp  plane.h  quad.hpp  shader.h  shader.hpp  skybox.h  texture.h  texture.hpp  vert-shader.h  vertex.hpp
include/glad/: glad.h
mesh-converter/: CMakeLists.txt  rubberduck.mesh  run.sh
mesh-converter/src/: main.cpp
opeGL/: CMakeLists.txt  clean.sh  run.sh
opeGL/include/: camera.h  chunk.h  cube.h  error.h  frameCounter.h  game.h  gamescene.h  mesh.h  meshoptimizer.h  model.h  plane.h  scene.h  shader.h  stb_image.h  texture.h  zlib.h
opeGL/include/assimp/: Base64.hpp  BaseImporter.h  Bitmap.h  BlobIOSystem.h  ByteSwapper.h  ColladaMetaData.h  CreateAnimMesh.h  DefaultIOStream.h  DefaultIOSystem.h  DefaultLogger.hpp  Exceptional.h  Exporter.hpp  GenericProperty.h  GltfMaterial.h  Hash.h  IOStream.hpp  IOStreamBuffer.h  IOSystem.hpp  Importer.hpp  LineSplitter.h  LogAux.h  LogStream.hpp  Logger.hpp  MathFunctions.h  MemoryIOWrapper.h  NullLogger.hpp  ObjMaterial.h  ParsingUtils.h  Profiler.h  ProgressHandler.hpp  RemoveComments.h  SGSpatialSort.h  SceneCombiner.h  SkeletonMeshBuilder.h  SmallVector.h  SmoothingGroups.h  SmoothingGroups.inl  SpatialSort.h  StandardShapes.h  StreamReader.h  (+49 more)
opeGL/include/glad/: glad.h
opeGL/include/glm/: .gitignore  copying.txt  manual.md  readme.md
opeGL/include/glm/cmake/: cmake_uninstall.cmake.in
opeGL/include/glm/doc/: man.doxy
opeGL/include/glm/test/: CMakeLists.txt
opeGL/resources/: chunkShader.frag  chunkShader.vert  cubeShader.frag  cubeShader.vert  grid.frag  grid.vert  modelShader.frag  modelShader.vert  shader.frag  shader.vert  shadow.frag  shadow.vert  shadowDebug.frag  shadowDebug.vert  skybox.frag  skybox.vert
opeGL/src/: camera.cpp  chunk.cpp  cube.cpp  error.cpp  frameCounter.cpp  game.cpp  gamescene.cpp  glad.c  mesh.cpp  model.cpp  plane.cpp  scene.cpp  shader.cpp  texture.cpp
resources/: modelShader.frag  shader.frag  shader.vert  shadowCube.frag  shadowCube.gs  shadowCube.vert  shadowDebug.vert  skybox.frag  skybox.vert
shaders/: model.vert  shader.frag  shader.vert
src/: camera.cpp  error.cpp  gamescene.cpp  level.cpp  main.cpp  mesh.cpp  model.cpp  opegl.cpp  plane.cpp  quad.cpp  shader.cpp  skybox.cpp  texture.cpp
(+1136 files in other folders)
